# pcFutbol

./: Cargo.toml  README.md  build.rs  pcfutbol.db
.cargo/: config.toml
crates/angular_ui/: Cargo.toml
crates/angular_ui/src/: lib.rs
crates/db/: Cargo.toml
crates/db/resources/: pcfutbol.db
crates/db/resources/sql_files/player/: select.sql
crates/db/src/: db_player_entity.rs  lib.rs
crates/gtk_ui/: Cargo.toml
crates/gtk_ui/src/: lib.rs  resources.rs  window.rs
crates/gui/: Cargo.toml  pcfutbol.ui
crates/gui/src/: lib.rs
crates/gui/src/constantes/: mod.rs
crates/gui/src/gtk4/: imp.rs  mod.rs
crates/serialize_db/: Cargo.toml
crates/serialize_db/src/: db_entities.rs  db_player_entity.rs  lib.rs
crates/sqllite_db/: Cargo.toml
crates/sqllite_db/resources/sql_files/: create_tables.sql
crates/sqllite_db/src/: lib.rs
crates/sqllite_db/src/entities/: football_club.rs  mod.rs  person.rs  player.rs  prelude.rs
crates/tauri_next_ui/: package-lock.json  package.json
crates/tauri_next_ui/src-tauri/: Cargo.toml  tauri.conf.json
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
resources/: pcfutbol.gresource  resources.xml
resources/gui/: pcfutbol.ui  resources.xml
src/: main.rs  resources.rs
src/data/: db_entities.rs  db_player_entity.rs  mod.rs
src/gui/: imp.rs  mod.rs  window.rs
src/utils/: mod.rs
src/window/: imp.rs
