[package]
name = "pc_futbol"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
	"crates/utils",
	"crates/angular_ui",
	"crates/gtk_ui",
	"crates/serialize_db",
	"crates/sqllite_db",
]
#exclude=["resources","crates/db/resources",]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "crates/utils", version = "0.1.0"  }
gtk_ui = { path = "crates/gtk_ui", version = "0.1.0"  }


[build-dependencies]
glib-build-tools = "0.17.0"

# Main nu binary
[[bin]]
name = "pc_futbol"
path = "src/main.rs"
