[package]
name = "pc_futbol"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
	"crates/utils",
	"crates/gtk_ui",
	"crates/serialize_db",
	"crates/sqllite_db",
	"crates/tauri_next_ui/src-tauri",
]
#exclude=["resources","crates/db/resources",]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path = "crates/utils", version = "0.1.0"}
tauri_next_ui = {path = "crates/tauri_next_ui/src-tauri", version = "0.1.0"}
sqllite_db = {path = "crates/sqllite_db", version = "0.1.0"}
tokio = { version = "1", features = ["full"]}

[build-dependencies]
glib-build-tools = "0.17.0"

# Main nu binary
[[bin]]
name = "pc_futbol"
path = "src/main.rs"
