[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils", version = "0.1.0"  }
#sqlx = { version = "0.6.2", features = [  "runtime-async-std-native-tls", "sqlite" ] }
#async-std = { version = "1.12.0", features = [ "attributes" ] }
serde ={version="1.0.93",features = ["derive"]}
serde_json ={version="1.0.93"}