[package]
name = "sqllite_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils", version = "0.1.0"  }
sqlx = { version = "0.6.2", features = [ "sqlite" ] }
futures = "0.3.28"
rustls = "0.21.0"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "0.11.2", features = ["sqlx-sqlite","runtime-tokio-rustls", "macros" ] }
